Fixed Magento modal popup box align vertically middle

--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
@@ -89,6 +89,9 @@
     &.modal-system-messages {
         .modal-inner-wrap {
             background: @modal-popup-colored__background;
+            top: 55px;
+            -webkit-transform: translateY(0%);
+            transform: translateY(0%);
         }
     }
 
